[project]
name = "sambanova"
description = "This node pack provides a Python node that uses the SambaNova API to send prompts to a chat AI model (e.g., DeepSeek-V3-0324) and retrieve responses, intended for integration into node-based workflows like ComfyUI."
version = "1.0.2"
license = {file = "LICENSE"}
dependencies = ["requests"]

[project.urls]
Repository = "https://github.com/neggo/comfyui-sambanova"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "neggo"
DisplayName = "comfyui-sambanova"
Icon = ""
